# amsync

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  credentials.env.sample  credentials.toml.sample
src/: amp.rs  main.rs
