[package]
name = "amsync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json", "gzip", "deflate"] }
spotify-rs = "0.3.14"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
stringmetrics = "2.2.2"
tokio = { version = "1.39.3", features = ["full"] }
warp = "0.3.7"
webbrowser = "1.0.1"
